- Added BOOL debug modifier for -g
- Added some of the v44 Spin2 builtin methods like byteswap
- Added warning for rep without @
- Added %QUAD keyword for 64 bit variables in Spin2
- Cleaned up the Spin parser to enable direct access to struct/obj members
- Fixed long relative branches (tjz, djnz, etc.)
- Fixed incorrect handling of simple for loops with unsigned variables
- Improved some debug error messages
- Only use the stack for variables whose address is actually taken (thanks to Ada for this!)
- Modified _BlockDevice data structure (used for littlefs, but someday may be used for fatfs too)
- Made _float_tointeger() saturate when the result is too big/small
- Made off_t be 64 bits, to allow for files > 2GB
- Revised file systems to all read from devices; this makes it possible to do loopback file systems or to use non-standard devices for file systems
- Suppress some asm warnings when building assembler output

Version 6.9.10
- Fix compilation error when GETWORD is replaced by MOV or MUL
- Fix varargs calls in nucode when no varying arguments present
- Fix an incorrect warning about locals shadowing globals in C

Version 6.9.9
- Fixed `--compress` flag on Windows
- Added `--zip` flag to flexcc
- Improved handling of file names in .zip output
- Improved error message for sizeof(x) when x is undefined

Version 6.9.8
- Fix `#foo+CONST` calculation

Version 6.9.7
- Fixed infinite loop when CORDIC and Read/Write optimizations fight
- Fixed potential crash when compiling empty functions
- Allow `#foo+CONST` for inline assembly when `foo` is a HUB label

Version 6.9.6
- Added a peephole for some address calculations (as suggested by Evan)
- Fixed some built-in functions in spin2cpp

Version 6.9.5
- Fixed immediate ranges for load/store, and made out of range immediates an error (thanks to Ada)
- Fixed an inappropriate memory forwarding with WZ (also thanks to Ada)
- Made sure arrays of bytes are put into memory, even if inside structs or unions

Version 6.9.4